# wlroots-0.19.0-rc3

./: CONTRIBUTING.md  LICENSE  README.md  meson.build  meson.options
backend/: backend.c  meson.build
backend/RDP/: backend.c  input_device.c  meson.build  output.c
backend/x11/: backend.c  meson.build
docs/: architecture.md  env_vars.md
include/: meson.build
include/backend/: RDP.h  x11.h
include/render/: gles2.h
include/render/allocator/: RDP_allocator.h
include/tinywl/: tinywl.h
include/wlr/: backend.h  config.h.in
include/wlr/backend/: RDP.h  x11.h
include/wlr/render/: egl.h  swapchain.h
include/wlr/xwayland/: xwayland.h
include/xwayland/: selection.h
protocol/: wlr-output-management-unstable-v1.xml
render/: egl.c  swapchain.c  wlr_renderer.c
render/allocator/: allocator.c
render/gles2/: meson.build  pass.c  pixel_format.c  renderer.c  surfaceless.c  surfaceless.h  texture.c
render/gles2/shaders/: quad.frag  tex_external.frag  tex_rgba.frag  tex_rgbx.frag
tinywl/: Makefile  backend_RDP_backend.i  meson.build  texture1.pngZone.Identifier  tinywl.c
types/: wlr_compositor.c  wlr_linux_dmabuf_v1.c  wlr_output_swapchain_manager.c
types/ext_image_capture_source_v1/: base.c
types/output/: output.c  render.c  swapchain.c
types/xdg_shell/: wlr_xdg_positioner.c
xcursor/: xcursor.c
xwayland/: meson.build  shell.c  sockets.c  xwm.c
xwayland/selection/: incoming.c  selection.c
